--- a/css/style.css
+++ b/css/style.css
@@ -658,7 +658,11 @@ img.ft_icon {
 }
 
 .img_ban{
-  width: 650px;
+  width: 570px;
+}
+
+img.img-fluid.center-block.part_img {
+    width: 86px;
 }
 
 @media screen and (max-width:768px){
@@ -672,4 +676,5 @@ img.ft_icon {
 .img_ban{
   width: 100%;
 }
+
 }
